results/SVCOMP/specgen/log-DriverManager-2024_02_25_14_10_46.txt
class SQLException extends Exception {}

class Statement {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void executeQuery(String s) {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }
}

class Connection {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void prepareStatement(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      assert false;
    }
  }

  public void close() throws SQLException {}

  //@ ensures \result != null;
  public Statement createStatement() {
    return new Statement();
  }
}

public class DriverManager {
  //@ requires connectionString != null;
  //@ ensures \result != null;
  public static Connection getConnection(String connectionString) {
    return new Connection();
  }
}
/home/max/Documents/JMLGPT/tmp/DriverManager.java:9: verify: The prover cannot establish an assertion (Assert) in method execute
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:25: verify: The prover cannot establish an assertion (Assert) in method executeQuery
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:17: verify: The prover cannot establish an assertion (Assert) in method executeUpdate
      assert false;
      ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:36: verify: The prover cannot establish an assertion (Assert) in method prepareStatement
      assert false;
      ^
4 verification failures

class SQLException extends Exception {}

class Statement {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void executeQuery(String s) {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }
}

class Connection {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  public void prepareStatement(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  public void close() throws SQLException {}

  //@ ensures \result != null;
  public Statement createStatement() {
    return new Statement();
  }
}

public class DriverManager {
  //@ requires connectionString != null;
  //@ ensures \result != null;
  public static Connection getConnection(String connectionString) {
    return new Connection();
  }
}
/home/max/Documents/JMLGPT/tmp/DriverManager.java:25: error: unreported exception SQLException; must be caught or declared to be thrown
      throw new SQLException();
      ^
1 error

class SQLException extends Exception {}

class Statement {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures \nothing;
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures \nothing;
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures \nothing;
  public void executeQuery(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }
}

class Connection {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures \nothing;
  public void prepareStatement(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ ensures \nothing;
  public void close() throws SQLException {}

  //@ ensures \result != null;
  public Statement createStatement() {
    return new Statement();
  }
}

public class DriverManager {
  //@ requires connectionString != null;
  //@ ensures \result != null;
  public static Connection getConnection(String connectionString) {
    return new Connection();
  }
}
/home/max/Documents/JMLGPT/tmp/DriverManager.java:7: error: incompatible types: <none> cannot be converted to boolean
  //@ ensures \nothing;
              ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:16: error: incompatible types: <none> cannot be converted to boolean
  //@ ensures \nothing;
              ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:25: error: incompatible types: <none> cannot be converted to boolean
  //@ ensures \nothing;
              ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:37: error: incompatible types: <none> cannot be converted to boolean
  //@ ensures \nothing;
              ^
/home/max/Documents/JMLGPT/tmp/DriverManager.java:44: error: incompatible types: <none> cannot be converted to boolean
  //@ ensures \nothing;
              ^
5 errors

class SQLException extends Exception {}

class Statement {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void execute(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void executeUpdate(String s, Object... o) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void executeQuery(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }
}

class Connection {

  //@ requires s != null;
  //@ requires !s.contains("<bad/>");
  //@ ensures true;
  public void prepareStatement(String s) throws SQLException {
    if (s.contains("<bad/>")) {
      throw new SQLException();
    }
  }

  //@ ensures true;
  public void close() throws SQLException {}

  //@ ensures \result != null;
  public Statement createStatement() {
    return new Statement();
  }
}

public class DriverManager {
  //@ requires connectionString != null;
  //@ ensures \result != null;
  public static Connection getConnection(String connectionString) {
    return new Connection();
  }
}

